# fengsha_ccpp

./: .gitignore  CMakeLists.txt  README.md  test.sh
.github/workflows/: ci.yml
driver/ccpp/: CMakeLists.txt  catchem_dust_wrapper.F90  catchem_dust_wrapper.F90 
src/: CMakeLists.txt  Makefile  catchem_config.F90  catchem_constants.F90  dust_data_mod.F90  dust_fengsha_mod.F90  fengsha.F90
test/: CMakeLists.txt  test.f90
